* The tip of the day window should no longer be obscured in the main menu
* The load/save windows now have better labelling
* Unavailable languages are shown as disabled until you select a Unicode font
* Support is added to auto-detect a Theme Hospital install via GOG Galaxy

# Translations
* Ukranian translation added. Thanks @JurecStrongman
* Dutch translation has been updated. Thanks @jetenergy
* Italian translation has been updated. Thanks @SebastianoPistore & @Inkub0
* Russian translation has been updated. Thanks @Matroftt
* Spanish translation has been updated. Thanks @ShiroAka
* French translation has been updated. Thanks @nMustaki & @Sanndow
* Brazilian-Portuguese translation has been updated. Thanks @altiereslima
* Some unused language strings have been cleaned up
* Custom campaign and level creators can now optionally add translated strings
  for campaign description, level briefing, and winning text

# Bug Fixes
* Swing (double) doors will no longer crash your game if you built rooms that
  used them while paused
* Fixed a bug for NVIDIA users who didn’t like graphical corruption when
  playing fullscreen at non-native resolutions
* Games should no longer crash irrecoverably because you have a 4k monitor :) 
* The game will now exit to the main menu cleanly if a problem occurred trying
  to load a new level or map
* Staff who have left the hospital can no longer ask for a raise
* Fixed a bug where some staff may have no initial before surname
* Patients can no longer litter outdoors
* Fixed a bug where an unreachable reception desk could cause a crash
* The Computer and Atom Analyser now make button sounds as originally intended
* The mark for vaccination action now makes a sound as originally intended
* Fixed a rare bug where edges of map tiles for parcels could cause unintended
  behaviour when purchasing plots
* Active cheats will now persist across saves
* Audio settings have better safeguards against no audio enabled/no background
  music