@@ -20,6 +20,22 @@
   </provides>
   <launchable type="desktop-id">com.corsixth.corsixth.desktop</launchable>
   <releases>
+    <release version="0.68.0~rc2" date="2024-09-25" type="development">
+      <description>
+        <p>Translations:</p>
+        <ul>
+          <li>Dutch translation has been updated</li>
+          <li>Ukranian translation has been updated</li>
+        </ul>
+        <p>Bug Fixes:</p>
+        <ul>
+          <li>Added a safeguard to prevent a crash of games previously using the
+              old cheat system</li>
+          <li>Patients waiting for a player decision no longer lose their mood icon
+              on vomit/pee</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.68.0~rc1" date="2024-09-14" type="development">
       <description>
         <p>New Features:</p>
@@ -29,13 +45,13 @@
         </ul>
         <p>Translations:</p>
         <ul>
-          <li>Ukranian translation added.</li>
+          <li>Ukranian translation added</li>
           <li>Brazilian-Portuguese translation has been updated</li>
         </ul>
         <p>Bug Fixes:</p>
         <ul>
-          <li>Tooltips for language menu now align with list items. Please note we are
-              aware of an issue where some languages don&apos;t show a tooltip.</li>
+          <li>Tooltips for language menu now align with list items. Please note we
+             are aware of an issue where some languages don&apos;t show a tooltip</li>
         </ul>
       </description>
     </release>
